# audio-cleaner

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose-dokploy.yml  docker-compose.yml  pyproject.toml  run.py  skills-lock.json
backend/app/: config.py  deps.py  errors.py  main.py  models.py
backend/app/analysis/: analyzer.py  best_two_min.py  detectors.py
backend/app/api/: __init__.py  advanced.py  albums.py  analysis.py  importer.py  jobs.py  lyrics.py  processing.py  projects.py  prompts.py  record.py  system.py  takes.py  templates.py  ws.py  ws_meter.py
backend/app/core/: __init__.py  capabilities.py  devices.py  jobs.py  library.py  metering.py  presets.py  processing.py  prompt_studio.py  recorder.py  scripts.py  upload.py
backend/app/export/: exporter.py
backend/app/importer/: executor.py  markers.py  scanner.py
backend/app/pipeline/: base.py  registry.py  separation.py
backend/app/presets/: generic-clean.json  raw.json  suno-voices.json
backend/app/prompt_templates/: lyrics-meta-v1.json  meta_tags.json  style-meta-v1.json
backend/app/scripts_data/: suno-voice-full.json
backend/tests/: conftest.py  test_analysis.py  test_api_smoke.py  test_best_two_min.py  test_devices.py  test_importer.py  test_metering.py  test_pipeline_stages.py  test_prompt_studio.py  test_recorder.py  test_separation.py
docs/en/: README.md
docs/es/: README.md
docs/pt-BR/: faq.md  guia-de-gravacao.md  importacao.md  instalacao.md  prompt-studio.md  suno-voices.md
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  queryKeys.ts  types.ts  ws.ts
frontend/src/components/: theme-provider.tsx
frontend/src/hooks/: useBrowserRecorder.ts  useDebouncedValue.ts  useMediaQuery.ts
frontend/src/i18n/: index.ts  languages.json  languages.ts
frontend/src/lib/: labels.ts  status.ts
(+272 files in other folders)
