[project]
name = "audio-cleaner"
version = "0.1.0"
description = "Gravador profissional + limpeza automática de voz para treinar sua voz no Suno AI"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.138",
    "uvicorn[standard]>=0.30",
    "sounddevice>=0.4.6",
    "soundfile>=0.12",
    "numpy>=1.26",
    "scipy>=1.11",
    "soxr>=0.3.7",
    "pyloudnorm>=0.1.1",
    "noisereduce>=3.0",
    "pedalboard>=0.9",
    "onnxruntime>=1.17",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "platformdirs>=4.2",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
]

[project.optional-dependencies]
denoise = ["deepfilternet>=0.5.6", "torch>=2.0"]
quality = ["clearvoice"]
separate = ["audio-separator[cpu]>=0.17"]
gpu = ["onnxruntime-gpu>=1.17"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/app"]

[tool.uv]
# clearvoice e audio-separator têm pins incompatíveis (rotary-embedding-torch);
# instalar um OU outro, nunca os dois no mesmo ambiente.
conflicts = [[{ extra = "quality" }, { extra = "separate" }]]

# torch CPU wheels (extra "denoise") — evita baixar CUDA gigante por padrão
[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["backend"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend"]
asyncio_mode = "auto"
markers = [
    "heavy: testes com modelos pesados (rodar local, não em CI)",
]
